# fleetex

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  SKILL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  compose-smoke.yml  publish.yml
services/: README.md  gui_smoke_test.py  realtime_collab_test.py  smoke_test.py  test-all.sh
services/_kit/: README.md  pyproject.toml
services/_kit/src/fleetex_service_kit/: __init__.py  app.py  config.py  contract.py  db.py  logging.py
services/_kit/tests/: test_kit.py
services/chat/: Dockerfile  README.md  pyproject.toml
services/chat/src/fleetex_chat/: __init__.py  __main__.py  app.py  constants.py  errors.py  formatter.py  messages.py  serialize.py  threads.py
services/chat/tests/: conftest.py  test_http.py  test_managers.py
services/clsi/: Dockerfile  README.md  pyproject.toml
services/clsi/src/fleetex_clsi/: __init__.py  __main__.py  app.py  compile_manager.py  config.py  errors.py  latex_runner.py  lock_manager.py  output_files.py  parsers.py  request_parser.py  resource_writer.py
services/clsi/tests/: conftest.py  test_http.py  test_sandbox.py  test_units.py
services/docstore/: Dockerfile  README.md  pyproject.toml
services/docstore/src/fleetex_docstore/: __init__.py  __main__.py  app.py  archive.py  config.py  constants.py  docmanager.py  errors.py  mongo.py  ranges.py  serialize.py
services/docstore/tests/: conftest.py  test_core.py  test_http.py
services/document-updater/: Dockerfile  README.md  pyproject.toml
services/document-updater/src/fleetex_document_updater/: __init__.py  __main__.py  app.py  config.py  dispatch.py  engine.py  errors.py  history_client.py  ot_text.py  persistence.py  ranges.py  redis_manager.py  update_manager.py
services/document-updater/tests/: test_http.py  test_lifecycle.py  test_ot_text.py
services/filestore/: Dockerfile  README.md  pyproject.toml
services/filestore/src/fleetex_filestore/: __init__.py  __main__.py  app.py  config.py  converter.py  errors.py  filehandler.py  keybuilder.py  persistor.py
services/filestore/tests/: conftest.py  test_fs_persistor.py  test_http.py  test_keybuilder.py
services/notifications/: Dockerfile  README.md  pyproject.toml
services/notifications/src/fleetex_notifications/: __init__.py  __main__.py  app.py  manager.py  serialize.py
services/notifications/tests/: conftest.py  test_http.py  test_manager.py
services/project-history/: Dockerfile  README.md  pyproject.toml
services/project-history/src/fleetex_project_history/: __init__.py  __main__.py  app.py  diff.py  doc_updater_client.py  history.py
services/project-history/tests/: conftest.py  test_diff.py  test_history.py  test_http.py
services/real-time/: Dockerfile  README.md  pyproject.toml
services/real-time/src/fleetex_realtime/: __init__.py  __main__.py  app.py  config.py  connected_users.py  controller.py  document_updater.py  errors.py  pubsub.py  redis_bridge.py  server.py  session_auth.py  web_api.py
services/real-time/tests/: conftest.py  test_http.py  test_server.py  test_session_auth.py  test_units.py
services/web/: Dockerfile  README.md  pyproject.toml
services/web/src/fleetex_web/: __init__.py  __main__.py  app.py  auth.py  authorization.py  collab_js.py  collaborators.py  compile.py  config.py  editor.py  file_tree.py  frontend.py  history.py  passwords.py  projects.py  security.py  sessions.py  users.py
services/web/tests/: conftest.py  test_collaborators.py  test_compile.py  test_csrf.py  test_editor.py  test_file_tree.py  test_frontend.py  test_history_proxy.py  test_http.py  test_projects.py  test_units.py
src/fleetex/: __init__.py  __main__.py  app.py  backup.py  cli.py  compose.py  config.py  doctor.py
src/fleetex/templates/: docker-compose.yml.tmpl
src/overleaf_ce/: __init__.py  __main__.py  cli.py  compose.py  config.py
src/overleaf_ce/templates/: docker-compose.yml.tmpl  mongodb-init-replica-set.js
src/paperfleet/: __init__.py  __main__.py  cli.py  config.py
src/paperfleet/templates/: docker-compose.yml.tmpl
tests/: test_app.py  test_cli.py
