[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex"
version = "0.1.0"
description = "A pip-installable launcher for self-hosting Overleaf Community Edition (Docker)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Overleaf CE Launcher contributors" }]
keywords = ["overleaf", "latex", "self-hosted", "docker", "sharelatex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
# Intentionally zero runtime dependencies: the launcher shells out to the
# `docker` CLI (which every target host already has) and uses only stdlib.
dependencies = []

[project.urls]
Homepage = "https://github.com/overleaf/overleaf"
"Upstream (Overleaf CE)" = "https://github.com/overleaf/overleaf"
Issues = "https://github.com/overleaf/overleaf/issues"

[project.scripts]
fleetex = "fleetex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex"]
# Non-Python template files (compose + mongo init) ship inside the package.
artifacts = ["src/fleetex/templates/*"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
