[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex"
version = "0.2.4"
description = "Fleetex: a pip-installable launcher to self-host your own LaTeX editor, powered by Overleaf Community Edition (Docker). Independent project, not affiliated with Overleaf."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Fleetex contributors" }]
keywords = ["latex", "self-hosted", "docker", "editor", "overleaf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
# Intentionally zero runtime dependencies: the launcher shells out to the
# `docker` CLI (which every target host already has) and uses only stdlib.
dependencies = []

[project.urls]
Homepage = "https://github.com/fbobe321/fleetex"
Repository = "https://github.com/fbobe321/fleetex"
Issues = "https://github.com/fbobe321/fleetex/issues"
"Upstream (Overleaf CE)" = "https://github.com/overleaf/overleaf"

[project.scripts]
fleetex = "fleetex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex"]
# Non-Python template files (compose + mongo init) ship inside the package.
artifacts = ["src/fleetex/templates/*"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
