[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex-service-kit"
version = "0.1.0"
description = "Shared foundations for Fleetex's Python reimplementation of Overleaf backend services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "motor>=3.4",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex_service_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
