[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex-clsi"
version = "0.1.0"
description = "Fleetex Python port of Overleaf's clsi (LaTeX compiler) microservice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fleetex-service-kit",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
fleetex-clsi = "fleetex_clsi.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex_clsi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
