[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex-docstore"
version = "0.1.0"
description = "Fleetex Python port of Overleaf's docstore microservice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fleetex-service-kit",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "mongomock-motor>=0.0.29"]

[project.scripts]
fleetex-docstore = "fleetex_docstore.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex_docstore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
