[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex-project-history"
version = "0.1.0"
description = "Fleetex Python port of Overleaf's project-history microservice (document version history)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fleetex-service-kit",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "mongomock-motor>=0.0.29"]

[project.scripts]
fleetex-project-history = "fleetex_project_history.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex_project_history"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
