[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fleetex-realtime"
version = "0.1.0"
description = "Fleetex Python port of Overleaf's real-time (websocket) microservice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fleetex-service-kit",
    "python-socketio>=5.11",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "fakeredis>=2.20"]

[project.scripts]
fleetex-realtime = "fleetex_realtime.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fleetex_realtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
